# ROICaT

./: .fuse_hidden0000602d0000002e  .gitattributes  .gitignore  LICENSE.md  README.md  README.rst  conftest.py  environment_CPU_only.yml  environment_GPU.yml  extra_requirements.txt  pyproject.toml  readthedocs.yaml  requirements-gpu.txt  requirements.txt  requirements_CPU_only.txt  requirements_GPU.txt  requirements_latest.txt  requirements_torchCPU.txt  run.py  setup.py  tox.ini  user.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: check_huggingface_space.py  increment_version.py
.github/workflows/: Multisystem_test.yml  Ubuntu-test.yml  build.yml  build_CPU.yml  build_GPU.yml  check_huggingface_space.yml  demo.yml  increment_version_workflow.yml  pypi_release.yml  wf_createEnv_GPU.yml  wf_pipOnly_CPU.yml  wf_pipOnly_GPU.yml
conda-environments/: ROICaT.yaml
docs/: .readthedocs.yaml  How to use ROICaT.rst  Troubleshooting.rst  chatGPT_style_guide.txt  index.rst  requirements.txt
docs/helpers/: ROInet_links.txt  clone_repo.txt  create_env.txt  pip_install.txt
docs/source/: Data Importing.rst  Installation.rst  conf.py  howto.rst  index.rst  inputsAndOutputs.rst  inputs_and_ouputs.rst  installation.rst  roicat.model_training.rst  roicat.rst  roicat.tracking.rst
docs/source/_static/css/: custom.css
docs_old/: About ROICaT.rst  Installation.rst  conf.py  index.rst  requirements.txt  roicat.model_training.rst  roicat.rst
notebooks/: classification_interactive_notebook-cv.ipynb  classification_interactive_notebook-load.ipynb  classification_interactive_notebook-train.ipynb  classification_interactive_notebook-training.ipynb  classification_interactive_notebook.ipynb  classify_by_drawingSelection.ipynb  demo_custom_data_importing.ipynb  test.ipynb  tracking_interactive_notebook.ipynb  tracking_interactive_notebook_stringencySweep.ipynb  tracking_script.ipynb  tracking_scripted_notebook.ipynb  tracking_scriptingDemo_notebook.ipynb  visualize_results.ipynb  visualize_results_colab.ipynb
notebooks/classification/: A1_classify_by_drawingSelection.ipynb  B1_labeling_interactive.ipynb  B1a_labeling_interactive.ipynb  B1alt_select_label_interactive.ipynb  B1b_labeling_drawingAndInteractive.ipynb  B2_classifier_train_interactive.ipynb  B3_classifier_inference_interactive.ipynb  classification_interactive_notebook-load.ipynb  classify_by_drawingSelection.ipynb
notebooks/colab/classification/: classify_by_drawingSelection_colab.ipynb
notebooks/colab/tracking/: tracking_interactive_notebook.ipynb  tracking_visualize_results.ipynb
notebooks/deprecated/: classification_interactive_notebook-load.ipynb
notebooks/jupyter/classification/: 00_ingest_data.ipynb  01_label_data.ipynb  02_classifier_train.ipynb  03_classifier_inference.ipynb  classifier_inference.ipynb  classifier_inference_interactive.ipynb  classifier_train.ipynb  classifier_train_interactive.ipynb  classify_by_drawingSelection.ipynb  labeling_interactive.ipynb
notebooks/jupyter/other/: demo_custom_data_importing.ipynb  demo_data_importing.ipynb
notebooks/jupyter/tracking/: 1_tracking_interactive_notebook.ipynb  1_tracking_interactive_notebook_david.ipynb  atl_trackingInteractiveOldVersion.ipynb  tracking_interactive_notebook.ipynb  tracking_interactive_notebook_atlUpdates.ipynb  tracking_scripted_notebook.ipynb  tracking_visualize_results.ipynb
notebooks/other/: demo_custom_data_importing.ipynb  demo_data_importing.ipynb
notebooks/tracking/: 1_tracking_interactive_notebook copy.ipynb  1_tracking_interactive_notebook.ipynb  1_tracking_notebook_interactive_comparison.ipynb  2_tracking_visualize_results.ipynb  3_tracking_handling_outputs.ipynb  tracking_interactive_notebook.ipynb  tracking_visualize_results.ipynb
roicat/: ROInet.py  __init__.py  __main__.py  data_importing.py  figgen.py  hdbscan_cannotLink.py  helpers.py  pipelines.py  util.py  visualization.py
roicat/classification/: __init__.py  augmentation_generator.py  classifier.py  classifier_fit.py  classifier_util.py  classify.py  crossval.py  data.py  evaluate.py  pipeline.py  preprocess.py  visualization.py  visualize.py
roicat/model_training/: __init__.py  augmentation.py  model.py  model_t.py  simclr_params_base.json  simclr_test.ipynb  simclr_test.py  simclr_training.ipynb  simclr_training.py  simclr_training_helpers.py  train_simclr.py  train_simclr_PCA.py  training.py  util.py
roicat/model_training/runs/: run_train_simclr.sh  submit_train_simclr.py
roicat/tracking/: __init__.py  alignment.py  blurring.py  cluster_assignment.py  clustering.py  data_importing.py  data_importing_caiman.py  scatteringWaveletTransformer.py  similarity_graph.py  visualization.py
scripts/: demo_run_tracking_pipeline.py  run_tracking.sh
scripts/slurm_dispatching/: dispatcher.py  master_controller.ipynb  tracking_script.py
tests/: __init__.py  test_environment.py  test_integration.py  test_interactive.py  test_packages.py  test_unit.py
tests/tests_packages/: test_umap_ops.py
tracking/: ROInet.py  alignment.py  blurring.py  cluster_assignment.py  clustering.py  data_importing.py  helpers.py  scatteringWaveletTransformer.py  similarity_graph.py  visualization.py
