[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "roicat"
description = "A library for classifying and tracking ROIs."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.md"}
authors = [
    {name = "Richard Hakim"},
]
keywords = ["neuroscience", "neuroimaging", "machine learning", "deep learning"]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "psutil",
    "py-cpuinfo",
    "GPUtil",
]
dynamic = ["version"]

[project.optional-dependencies]
classification = [
    "einops==0.6.1",
    "jupyter==1.0.0",
    "matplotlib==3.7.1",
    "natsort==8.3.1",
    "numpy==1.24.3",
    "paramiko==3.2.0",
    "Pillow==9.5.0",
    "pytest==7.3.2",
    "scikit_learn==1.2.2",
    "scipy==1.10.1",
    "seaborn==0.12.2",
    "sparse==0.14.0",
    "tqdm==4.65.0",
    "xxhash==3.2.0",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "torchaudio==2.0.2",
    "opencv_contrib_python==4.7.0.72",
    "umap-learn==0.5.3",
    "bokeh==3.1.1",
    "holoviews[recommended]==1.16.2",
]
tracking = [
    "einops==0.6.1",
    "jupyter==1.0.0",
    "matplotlib==3.7.1",
    "natsort==8.3.1",
    "numpy==1.24.3",
    "paramiko==3.2.0",
    "Pillow==9.5.0",
    "pytest==7.3.2",
    "scikit_learn==1.2.2",
    "scipy==1.10.1",
    "seaborn==0.12.2",
    "sparse==0.14.0",
    "tqdm==4.65.0",
    "xxhash==3.2.0",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "torchaudio==2.0.2",
    "opencv_contrib_python==4.7.0.72",
    "hdbscan==0.8.29",
    "kymatio==0.3.0",
    "optuna==3.2.0",
]
core = [
    "einops==0.6.1",
    "jupyter==1.0.0",
    "matplotlib==3.7.1",
    "natsort==8.3.1",
    "numpy==1.24.3",
    "paramiko==3.2.0",
    "Pillow==9.5.0",
    "pytest==7.3.2",
    "scikit_learn==1.2.2",
    "scipy==1.10.1",
    "seaborn==0.12.2",
    "sparse==0.14.0",
    "tqdm==4.65.0",
    "xxhash==3.2.0",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "torchaudio==2.0.2",
]
all = [
    "einops==0.6.1",
    "jupyter==1.0.0",
    "matplotlib==3.7.1",
    "natsort==8.3.1",
    "numpy==1.24.3",
    "paramiko==3.2.0",
    "Pillow==9.5.0",
    "pytest==7.3.2",
    "scikit_learn==1.2.2",
    "scipy==1.10.1",
    "seaborn==0.12.2",
    "sparse==0.14.0",
    "tqdm==4.65.0",
    "xxhash==3.2.0",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "torchaudio==2.0.2",
    "opencv_contrib_python==4.7.0.72",
    "umap-learn==0.5.3",
    "bokeh==3.1.1",
    "holoviews[recommended]==1.16.2",
    "hdbscan==0.8.29",
    "kymatio==0.3.0",
    "optuna==3.2.0",
]
all_latest = [
    "einops",
    "jupyter",
    "matplotlib",
    "natsort",
    "numpy",
    "paramiko",
    "Pillow",
    "pytest",
    "scikit_learn",
    "scipy",
    "seaborn",
    "sparse",
    "tqdm",
    "xxhash",
    "torch",
    "torchvision",
    "torchaudio",
    "opencv_contrib_python",
    "umap-learn",
    "bokeh",
    "holoviews[recommended]",
    "hdbscan",
    "kymatio",
    "optuna",
]

[tool.setuptools.packages]
find = {namespaces = false}

[project.urls]
url = "https://github.com/RichieHakim/ROICaT"

[tool.setuptools.dynamic]
version = {attr = "roicat.__version__"}