[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "roicat"
dynamic = ["version"]
description = "A library for classifying and tracking ROIs."
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.10, <3.14"
authors = [{name = "Richard Hakim"}]
keywords = ["neuroscience", "neuroimaging", "machine learning", "deep learning"]

[project.optional-dependencies]
core = [
    "jupyter==1.0.0",
    "matplotlib==3.10.5",
    "mat73==0.65",
    "natsort==8.4.0",
    "numpy==2.2.6",
    "optuna==4.3.0",
    "Pillow==11.3.0",
    "pytest==8.4.1",
    "PyYAML==6.0.2",
    "scikit-learn==1.7.1",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "sparse==0.17.0",
    "tqdm==4.67.1",
    "xxhash==3.5.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "torchaudio==2.7.1",
    "psutil==7.0.0",
    "py-cpuinfo==9.0.0",
    "skl2onnx==1.19.1",
    "onnx==1.17.0",
    "onnxruntime==1.22.1",
    "richfile>=0.4.5",
]
classification = [
    "roicat[core]",
    "umap-learn==0.5.9.post2",
    "bokeh==3.7.3",
    "holoviews[recommended]==1.21.0",
    "jupyter-bokeh==4.0.5",
]
tracking = [
    "roicat[core]",
    "opencv-contrib-python-headless<=4.12.0.88",
    "hdbscan==0.8.40",
    "kymatio==0.3.0",
    "kornia==0.8.1",
    "romatch-roicat>=0.1.1",
]
all = [
    "roicat[core,classification,tracking]",
    "onnx2torch==1.5.15",
    "scikit-image==0.25.2",
    "selenium==4.34.2",
]
all_latest = [
    "jupyter",
    "matplotlib",
    "mat73",
    "natsort",
    "numpy",
    "optuna",
    "Pillow",
    "pytest",
    "PyYAML",
    "scikit-learn",
    "scipy",
    "seaborn",
    "sparse",
    "tqdm",
    "xxhash",
    "torch",
    "torchvision",
    "torchaudio",
    "psutil",
    "py-cpuinfo",
    "skl2onnx",
    "onnx",
    "onnxruntime",
    "richfile",
    "umap-learn",
    "bokeh",
    "holoviews[recommended]",
    "jupyter-bokeh",
    "opencv-contrib-python-headless",
    "hdbscan",
    "kymatio",
    "kornia",
    "romatch-roicat",
    "onnx2torch",
    "scikit-image",
    "selenium",
]

[project.scripts]
roicat = "roicat.__main__:main"

[project.urls]
Homepage = "https://github.com/RichieHakim/ROICaT"

[tool.setuptools.dynamic]
version = {attr = "roicat.__version__"}

[tool.setuptools.packages.find]
include = ["roicat*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
