[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "roicat"
dynamic = ["version"]
description = "A library for classifying and tracking ROIs."
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE.md"]
requires-python = ">=3.11, <3.13"
authors = [{name = "Richard Hakim"}]
keywords = ["neuroscience", "neuroimaging", "machine learning", "deep learning"]

[project.optional-dependencies]
core = [
    "jupyter==1.1.1",
    "matplotlib==3.10.8",
    "mat73==0.65",
    "natsort==8.4.0",
    "numpy==2.4.3",
    "optuna==4.7.0",
    "Pillow==12.1.0",
    "pytest==9.0.2",
    "PyYAML==6.0.3",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "seaborn==0.13.2",
    "sparse==0.17.0",
    "tqdm==4.67.3",
    "xxhash==3.6.0",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "torchaudio==2.10.0",
    "psutil==7.2.2",
    "py-cpuinfo==9.0.0",
    "skl2onnx==1.20.0",
    "onnx>=1.17.0,<1.21.0",
    "onnxruntime==1.24.1",
    "richfile>=0.6.2",
    "sparse_convolution>=0.4.0",
]
classification = [
    "roicat[core]",
    "umap-learn==0.5.11",
    "bokeh==3.8.2",
    "holoviews[recommended]==1.22.1",
    "jupyter-bokeh==4.0.5",
]
tracking = [
    "roicat[core]",
    "opencv-contrib-python-headless<=4.13.0.92",
    "fast-hdbscan==0.3.0",
    "kymatio==0.3.0",
    "kornia==0.8.2",
    "romatch-roicat>=0.1.2.post1",
    "roiextractors==0.8.0",
]
all = [
    "roicat[core,classification,tracking]",
    "onnx2torch==1.5.15",
    "scikit-image==0.26.0",
    "selenium==4.40.0",
]
all_latest = [
    "jupyter",
    "matplotlib",
    "mat73",
    "natsort",
    "numpy",
    "optuna",
    "Pillow",
    "pytest",
    "PyYAML",
    "scikit-learn",
    "scipy",
    "seaborn",
    "sparse",
    "tqdm",
    "xxhash",
    "torch",
    "torchvision",
    "torchaudio",
    "psutil",
    "py-cpuinfo",
    "skl2onnx",
    "onnx",
    "onnxruntime",
    "richfile",
    "umap-learn",
    "bokeh",
    "holoviews[recommended]",
    "jupyter-bokeh",
    "opencv-contrib-python-headless",
    "fast-hdbscan==0.3.0",
    "kymatio",
    "kornia",
    "romatch-roicat",
    "onnx2torch",
    "scikit-image",
    "selenium",
    "roiextractors==0.8.0",
    "sparse_convolution",
]

[project.scripts]
roicat = "roicat.__main__:main"

[project.urls]
Homepage = "https://github.com/RichieHakim/ROICaT"

[tool.setuptools.dynamic]
version = {attr = "roicat.__version__"}

[tool.setuptools.packages.find]
include = ["roicat*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "determinism: marks tests that verify pipeline determinism (runs pipeline twice)",
]
